--- a/stub/css/bloglist.css
+++ b/stub/css/bloglist.css
@@ -1,9 +1,9 @@
 .post {
     position: relative;
-    width: 90%;
-    height: 20%;
+    display:  inline-table;
+    width: 40%;
     background: #fff;
-    box-shadow:0 4px 10px 0 rgba(17, 4, 63, 0.2),0 4px 20px 0 rgba(79, 19, 97, 0.19);
+    box-shadow:0 4px 10px 0 rgba(12, 3, 48, 0.2),0 4px 20px 0 rgba(13, 1, 17, 0.19);
     margin: 10px 10px 10px 20px;
     float:left;
     border-radius: 15px;
@@ -59,28 +59,76 @@ body {
 }
 .allPostsContainer {
     height: 100%;
-    width: 45%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
 
-}
-.modal3 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content/Box */
-  .modal-content3 {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
+} 
+
+
+.deletePost {
+    padding-top: 5px; 
+    padding-right: 5px; 
+    position: relative;
+    float: right;
+    font-size: 25px;        
+    color: #000;
+    font-family: 'Abel', sans-serif;
+    width: 10%;
+    background-color: #E8E8E8;
+    border: none;
+    }
+
+    .deletePost:hover,
+    .deletePost:focus {
+        color: #f44336;
+        cursor: pointer;
+        
+    } 
+    .Prompt {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+        padding-top: 25px;
+        opacity: 1;
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.8);
+    }
+    
+    
+    .deleteform{
+        background-color: #fefefe;
+        margin: 15% auto auto auto;
+        border: 1px solid #fff;
+        width: 27%; 
+        padding: 20px 20px 20px 20px;
+        opacity: 1;
+        overflow: hidden;
+        color: #000;
+        }
+      .dc{
+          font-size:18px;
+          padding-top: 0%;
+          padding-bottom: 15px;
+      }
+      
+      .db{
+          float: left;
+          width: 40%;
+          background-color: #f44336;
+          padding:10px 0px 10px 0px;
+      }
+      .cd{
+        float: right;
+        width: 40%;
+        padding:10px 0px 10px 0px;
+        background-color: springgreen;
+    }
